# FaithfulAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  example.py  pyproject.toml
eval/: eval_01.json  eval_02.json  eval_03.json  eval_04.json  eval_05.json  eval_06.json  eval_07.json  eval_08.json  eval_09.json  eval_10.json  run_eval.py
faithfulai/: __init__.py  config.py  logging_config.py  models.py  observability.py  pipeline.py
faithfulai/detectors/: __init__.py  claim_extractor.py  drift_detector.py  hf_nli.py  nli_scorer.py  span_extractor.py
faithfulai/llm_providers/: __init__.py  anthropic_provider.py  base.py  openai_compat.py
server/: api.py  mcp_server.py
tests/: conftest.py
tests/integration/: test_api.py  test_local_nli.py  test_pipeline_e2e.py  test_providers.py
tests/unit/: test_aggregator.py  test_claim_extractor.py  test_config.py  test_drift_detector.py  test_models.py  test_nli_scorer.py  test_span_extractor.py
